# ascii-art

./: Cargo.toml
art/: astronaut.txt  triceratops.txt
src/: main.rs
