[package]
name = "ascii-art"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
serde_json = "1.0.81"
tokio = { version = "1.18.2", features = ["full"] }
axum = "0.5.15"
tracing = "0.1.33"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
parking_lot = "0.12.1"
serde = { version = "1.0.144", features = ["derive"] }
openssl = { version = "0.10", features = ["vendored"] }
rand = "0.8.5"
